# cmake-fedora

./: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  README.md  RELEASE-NOTES.txt  TODO.md  cmake-fedora.conf
Modules/: CMakeLists.txt  CmakeFedoraScript.cmake  DateTimeFormat.cmake  ManageAPIDoc.cmake  ManageArchive.cmake  ManageChangeLogScript.cmake  ManageEnvironment.cmake  ManageEnvironmentCommon.cmake  ManageFile.cmake  ManageGConf.cmake  ManageGettextScript.cmake  ManageGitScript.cmake  ManageRPM.cmake  ManageRPMScript.cmake  ManageRelease.cmake  ManageReleaseFedora.cmake  ManageSourceVersionControl.cmake  ManageTarget.cmake  ManageTranslation.cmake  ManageUninstall.cmake  ManageUpload.cmake  ManageVersion.cmake  ManageZanata.cmake  ManageZanataDefinition.cmake  ManageZanataScript.cmake  ManageZanataSuggest.cmake
Templates/: CMakeLists.txt
Templates/fedora/: CMakeLists.txt.template  RELEASE-NOTES.txt.template  bsd-3-clauses.txt
debian/: changelog  cmake-fedora.lintian-overrides  control  copyright  rules  watch
debian/build-aux/: README.gitignore  gitignore
scripts/: CMakeLists.txt  cmake-fedora-fedpkg  cmake-fedora-functions  cmake-fedora-koji  cmake-fedora-newprj  cmake-fedora-pkgdb  cmake-fedora-reset  cmake-fedora-zanata  koji-build-scratch
test/: configure-file-project.txt  sample-setting.txt  sample-setting2.txt  testCmakeFedoraFedpkg.cmake  testCmakeFedoraFedpkgDeep.cmake  testCmakeFedoraKoji.cmake  testCmakeFedoraNewprj.cmake  testCmakeFedoraScript.cmake  testCommon.cmake  testManageFile.cmake  testManageString.cmake  testManageTranslation.cmake  testManageVariable.cmake  testManageZanata.cmake
